--- a/pages/10356.html
+++ b/pages/10356.html
@@ -258,8 +258,8 @@ margin-left: 0em;
     //--><!]]>
   </script>
 
-  	<link href="http://nlab-local/nlab/atom_with_headlines" rel="alternate" title="Atom with headlines" type="application/atom+xml" />
-  	<link href="http://nlab-local/nlab/atom_with_content" rel="alternate" title="Atom with full content" type="application/atom+xml" />
+  	<link href="https://ncatlab.org/nlab/atom_with_headlines" rel="alternate" title="Atom with headlines" type="application/atom+xml" />
+  	<link href="https://ncatlab.org/nlab/atom_with_content" rel="alternate" title="Atom with full content" type="application/atom+xml" />
   <script type="text/javascript">
   document.observe("dom:loaded", function() {
     generateThmNumbers();
@@ -294,7 +294,7 @@ margin-left: 0em;
     <a href="/nlab/show/HomePage" accesskey="H" title="Home page">Home Page</a> |
     <a href="/nlab/all_pages" accesskey="A" title="List of all pages">All Pages</a> |
     <a href="/nlab/latest_revisions" accesskey="U" title="Latest edits and page creations">Latest Revisions</a> |
-    <a href="https://nforum.ncatlab.org/discussion/9027/#Item_2" title="Discuss this page in its dedicated thread on the nForum" style="color: black">Discuss this page</a> |
+    <a href="https://nforum.ncatlab.org/discussion/9027/#Item_3" title="Discuss this page in its dedicated thread on the nForum" style="color: black">Discuss this page</a> |
     <a href="/nlab/feeds" title="Subscribe to changes by Atom">Feeds</a> |
 <form accept-charset="utf-8" action="/nlab/search" id="navigationSearchForm" method="get">      <fieldset class="search"><input type="text" id="searchField" name="query" value="Search"
              onfocus="this.value == 'Search' ? this.value = '' : true"
@@ -916,9 +916,9 @@ margin-left: 0em;
 <h1 id="contents">Contents</h1>
 <div class='maruku_toc'>
 <ul>
-<li><a href='#idea'>Idea</a></li>
+<li><a href='#DBranesAtOrbifoldSingularities'>Idea</a></li>
 <ul>
-<li><a href='#DBranesAtOrbifoldSingularities'>D-branes at orbifold singularities</a></li>
+<li><a href='#AtGlobalLinearOrbifoldSingularities'>At global linear orbifold singularities</a></li>
 <li><a href='#in_terms_of_twisted_sector_boundary_states'>In terms of twisted sector boundary states</a></li>
 <li><a href='#dbranes_on_resolutions_of_orbifold_singularities'>D-branes on resolutions of orbifold singularities</a></li>
 <li><a href='#InTermsOfTheWorldvolumeGaugeTheories'>In terms the worldvolume gauge theories</a></li>
@@ -929,13 +929,69 @@ margin-left: 0em;
 </ul>
 </div>
 
-<h2 id="idea">Idea</h2>
+<h2 id="DBranesAtOrbifoldSingularities">Idea</h2>
 
-<h3 id="DBranesAtOrbifoldSingularities">D-branes at orbifold singularities</h3>
+<p>For <a class="existingWikiWord" href="/nlab/show/type+II+superstrings">type II superstrings</a> on a global <a class="existingWikiWord" href="/nlab/show/orbifold">orbifold</a> <a class="existingWikiWord" href="/nlab/show/spacetime">spacetime</a> <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>X</mi><mo>⫽</mo><mi>G</mi></mrow><annotation encoding="application/x-tex">X\sslash G</annotation></semantics></math>, <a class="existingWikiWord" href="/nlab/show/D-brane+charge">D-brane charge</a> is measured by the <a class="existingWikiWord" href="/nlab/show/equivariant+K-theory">equivariant K-theory</a> <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><msub><mi>K</mi> <mi>G</mi></msub><mo stretchy="false">(</mo><mi>X</mi><mo stretchy="false">)</mo></mrow><annotation encoding="application/x-tex">K_G(X)</annotation></semantics></math>. Under the canonical map <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>K</mi><mo stretchy="false">(</mo><mi>X</mi><mo stretchy="false">/</mo><mi>G</mi><mo stretchy="false">)</mo><mo>⟶</mo><msub><mi>K</mi> <mi>G</mi></msub><mo stretchy="false">(</mo><mi>X</mi><mo stretchy="false">)</mo></mrow><annotation encoding="application/x-tex">K(X/G) \longrightarrow K_G(X)</annotation></semantics></math> from the plain <a class="existingWikiWord" href="/nlab/show/topological+K-theory">topological K-theory</a> of the <a class="existingWikiWord" href="/nlab/show/quotient+space">quotient space</a> <a class="existingWikiWord" href="/nlab/show/simple+object">irreducible elements</a> of <a class="existingWikiWord" href="/nlab/show/K-theory">K-theory</a> in general decompose into <a class="existingWikiWord" href="/nlab/show/direct+sums">direct sums</a> of smaller <a class="existingWikiWord" href="/nlab/show/simple+object">irreducible elements</a>, hence into “smaller fractions stuck at the orbifold singularity” .</p>
 
-<p>For <a class="existingWikiWord" href="/nlab/show/type+II+superstrings">type II superstrings</a> on a global <a class="existingWikiWord" href="/nlab/show/orbifold">orbifold</a> <a class="existingWikiWord" href="/nlab/show/spacetime">spacetime</a> <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>X</mi><mo>⫽</mo><mi>G</mi></mrow><annotation encoding="application/x-tex">X\sslash G</annotation></semantics></math>, <a class="existingWikiWord" href="/nlab/show/D-brane+charge">D-brane charge</a> is measured by the <a class="existingWikiWord" href="/nlab/show/equivariant+K-theory">equivariant K-theory</a> <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><msub><mi>K</mi> <mi>G</mi></msub><mo stretchy="false">(</mo><mi>X</mi><mo stretchy="false">)</mo></mrow><annotation encoding="application/x-tex">K_G(X)</annotation></semantics></math>. Under the canonical map <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>K</mi><mo stretchy="false">(</mo><mi>X</mi><mo stretchy="false">/</mo><mi>G</mi><mo stretchy="false">)</mo><mo>⟶</mo><msub><mi>K</mi> <mi>G</mi></msub><mo stretchy="false">(</mo><mi>X</mi><mo stretchy="false">)</mo></mrow><annotation encoding="application/x-tex">K(X/G) \longrightarrow K_G(X)</annotation></semantics></math> from the plain <a class="existingWikiWord" href="/nlab/show/topological+K-theory">topological K-theory</a> of the <a class="existingWikiWord" href="/nlab/show/quotient+space">quotient space</a> irreducible elements of K-theory in general decompose into <a class="existingWikiWord" href="/nlab/show/direct+sums">direct sums</a> of smaller irreducible elements, hence into “smaller fractions stuck at the orbifold singularity” .</p>
+<p>The corresponding <a class="existingWikiWord" href="/nlab/show/D-branes">D-branes</a> are called <em>fractional</em> D-branes in the literature.</p>
 
-<p>At least some of these are associated with <em>fractional</em> D-branes in the literature.</p>
+<h3 id="AtGlobalLinearOrbifoldSingularities">At global linear orbifold singularities</h3>
+
+<p>If here <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>X</mi></mrow><annotation encoding="application/x-tex">X</annotation></semantics></math> is a <a class="existingWikiWord" href="/nlab/show/contractible+space">contractible space</a> (at it is in the majority of examples discussed in the literature!), then its <a class="existingWikiWord" href="/nlab/show/equivariant+K-theory">equivariant K-theory</a> is equivalently that of the point</p>
+<div class="maruku-equation"><math xmlns="http://www.w3.org/1998/Math/MathML" display="block" class="maruku-mathml"><semantics><mrow><msub><mi>K</mi> <mi>G</mi></msub><mo stretchy="false">(</mo><mi>X</mi><mo stretchy="false">)</mo><mspace width="thickmathspace"></mspace><mo>≃</mo><mspace width="thickmathspace"></mspace><msub><mi>K</mi> <mi>G</mi></msub><mo stretchy="false">(</mo><mo>*</mo><mo stretchy="false">)</mo><mspace width="thickmathspace"></mspace><mo>≃</mo><mspace width="thickmathspace"></mspace><msub><mi>R</mi> <mi>ℂ</mi></msub><mo stretchy="false">(</mo><mi>G</mi><mo stretchy="false">)</mo></mrow><annotation encoding="application/x-tex">
+  K_G(X)
+  \;\simeq\;
+  K_G(\ast)
+  \;\simeq\;
+  R_{\mathbb{C}}(G)
+
+</annotation></semantics></math></div>
+<p>which is <a class="existingWikiWord" href="/nlab/show/isomorphism">isomorphic</a> to the <a class="existingWikiWord" href="/nlab/show/representation+ring">representation ring</a> of <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>G</mi></mrow><annotation encoding="application/x-tex">G</annotation></semantics></math>.</p>
+
+<p>Under this identification, the (non-fractional) unit brane is identified with the <a class="existingWikiWord" href="/nlab/show/regular+representation">regular representation</a> <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>k</mi><mo stretchy="false">[</mo><mi>G</mi><mo stretchy="false">/</mo><mn>1</mn><mo stretchy="false">]</mo></mrow><annotation encoding="application/x-tex">k[G/1]</annotation></semantics></math> of <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>G</mi></mrow><annotation encoding="application/x-tex">G</annotation></semantics></math>:</p>
+<div class="maruku-equation"><math xmlns="http://www.w3.org/1998/Math/MathML" display="block" class="maruku-mathml"><semantics><mrow><mrow><mtable><mtr><mtd></mtd> <mtd></mtd> <mtd><mi>K</mi><mo stretchy="false">(</mo><mi>X</mi><mo stretchy="false">)</mo></mtd> <mtd><mo>⟶</mo></mtd> <mtd><msub><mi>K</mi> <mi>G</mi></msub><mo stretchy="false">(</mo><mi>X</mi><mo stretchy="false">)</mo></mtd></mtr> <mtr><mtd></mtd> <mtd></mtd> <mtd><mo>≃</mo></mtd> <mtd></mtd> <mtd><mo>≃</mo></mtd></mtr> <mtr><mtd><mi>ℤ</mi></mtd> <mtd><mo>≃</mo></mtd> <mtd><mi>K</mi><mo stretchy="false">(</mo><mo>*</mo><mo stretchy="false">)</mo></mtd> <mtd><mo>⟶</mo></mtd> <mtd><msub><mi>K</mi> <mi>G</mi></msub><mo stretchy="false">(</mo><mo>*</mo><mo stretchy="false">)</mo></mtd> <mtd><mo>≃</mo></mtd> <mtd><msub><mi>R</mi> <mi>ℂ</mi></msub><mo stretchy="false">(</mo><mi>G</mi><mo stretchy="false">)</mo></mtd></mtr> <mtr><mtd><mn>1</mn></mtd> <mtd></mtd> <mtd></mtd> <mtd><mo>↦</mo></mtd> <mtd></mtd> <mtd></mtd> <mtd><mi>k</mi><mo stretchy="false">[</mo><mi>G</mi><mo stretchy="false">/</mo><mn>1</mn><mo stretchy="false">]</mo></mtd></mtr></mtable></mrow></mrow><annotation encoding="application/x-tex">
+  \array{
+    &amp;&amp;
+    K(X) &amp;\longrightarrow &amp; K_G(X)
+    \\
+    &amp;&amp;
+    \simeq &amp;&amp; \simeq
+    \\
+    \mathbb{Z}
+    &amp;\simeq&amp;
+    K(\ast) &amp;\longrightarrow&amp; K_G(\ast) &amp;\simeq&amp; R_{\mathbb{C}}(G)
+    \\
+    1 &amp;&amp; &amp; \mapsto &amp; &amp;&amp; k[G/1]
+  }
+
+</annotation></semantics></math></div>
+<p>The non-fractional nature of the <a class="existingWikiWord" href="/nlab/show/permutation+representation">permutation representation</a> is reflected in the fact that its <a class="existingWikiWord" href="/nlab/show/character">character</a> is still unity on the <a class="existingWikiWord" href="/nlab/show/neutral+element">neutral element</a> <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>e</mi><mo>∈</mo><mi>G</mi></mrow><annotation encoding="application/x-tex">e \in G</annotation></semantics></math> and vanishes on other elements (i.e. in the non-trivial <a class="existingWikiWord" href="/nlab/show/twisted+sectors">twisted sectors</a>):</p>
+<div class="maruku-equation"><math xmlns="http://www.w3.org/1998/Math/MathML" display="block" class="maruku-mathml"><semantics><mrow><msub><mi>χ</mi> <mrow><mi>k</mi><mo stretchy="false">[</mo><mi>G</mi><mo stretchy="false">/</mo><mn>1</mn><mo stretchy="false">]</mo></mrow></msub><mspace width="thickmathspace"></mspace><mo lspace="verythinmathspace">:</mo><mspace width="thickmathspace"></mspace><mi>g</mi><mo>↦</mo><mrow><mo>{</mo><mrow><mtable><mtr><mtd><mn>1</mn></mtd> <mtd><mo stretchy="false">|</mo></mtd> <mtd><mi>g</mi><mo>=</mo><mi>e</mi></mtd></mtr> <mtr><mtd><mn>0</mn></mtd> <mtd><mo stretchy="false">|</mo></mtd> <mtd><mtext>otherwise</mtext></mtd></mtr></mtable></mrow></mrow></mrow><annotation encoding="application/x-tex">
+  \chi_{k[G/1]}
+  \;\colon\;
+  g 
+    \mapsto
+  \left\{
+  \array{
+    1 &amp;\vert&amp; g = e
+    \\
+    0 &amp;\vert&amp; \text{otherwise}
+  }
+  \right.
+
+</annotation></semantics></math></div>
+<p>But, by a standard fact from <a class="existingWikiWord" href="/nlab/show/representation+theory">representation theory</a>, the <a class="existingWikiWord" href="/nlab/show/regular+representation">regular representation</a> is far from <a class="existingWikiWord" href="/nlab/show/irreducible+representation">irreducible</a>, instead it is a <a class="existingWikiWord" href="/nlab/show/direct+sum">direct sum</a> of <em>all</em> existing <a class="existingWikiWord" href="/nlab/show/irreducible+representations">irreducible representations</a> <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><msub><mi>V</mi> <mi>i</mi></msub><mo>∈</mo><msub><mi>R</mi> <mi>ℂ</mi></msub><mo stretchy="false">(</mo><mi>G</mi><mo stretchy="false">)</mo></mrow><annotation encoding="application/x-tex">V_i \in R_{\mathbb{C}}(G)</annotation></semantics></math> (each appearing with multiplicity equal to its <a class="existingWikiWord" href="/nlab/show/dimension">dimension</a>):</p>
+<div class="maruku-equation"><math xmlns="http://www.w3.org/1998/Math/MathML" display="block" class="maruku-mathml"><semantics><mrow><mi>k</mi><mo stretchy="false">[</mo><mi>G</mi><mo stretchy="false">/</mo><mn>1</mn><mo stretchy="false">]</mo><mspace width="thickmathspace"></mspace><mo>≃</mo><mspace width="thickmathspace"></mspace><munder><mo lspace="thinmathspace" rspace="thinmathspace">⨁</mo><mi>i</mi></munder><msub><mi>d</mi> <mi>i</mi></msub><msub><mi>V</mi> <mi>i</mi></msub><mspace width="thinmathspace"></mspace><mo>.</mo></mrow><annotation encoding="application/x-tex">
+  k[G/1]
+  \;\simeq\;
+  \underset{i}{\bigoplus}
+  d_i V_i
+  \,.
+
+</annotation></semantics></math></div>
+<p>In this sense, the unit brane on <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>X</mi></mrow><annotation encoding="application/x-tex">X</annotation></semantics></math> decays into fractional branes at the orbifold singularities <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>X</mi><mo>⫽</mo><mi>G</mi></mrow><annotation encoding="application/x-tex">X\sslash G</annotation></semantics></math>.</p>
+
+<p>Those fractional branes corresponding to <a class="existingWikiWord" href="/nlab/show/permutation+representations">permutation representations</a> in <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><msub><mi>K</mi> <mi>G</mi></msub><mo stretchy="false">(</mo><mo>*</mo><mo stretchy="false">)</mo><mo>≃</mo><msub><mi>R</mi> <mi>ℂ</mi></msub><mo stretchy="false">(</mo><mi>G</mi><mo stretchy="false">)</mo></mrow><annotation encoding="application/x-tex">K_G(\ast) \simeq R_{\mathbb{C}}(G)</annotation></semantics></math> are called <em><span class="newWikiWord">permutation branes<a href="/nlab/new/permutation+branes">?</a></span></em>.</p>
 
 <h3 id="in_terms_of_twisted_sector_boundary_states">In terms of twisted sector boundary states</h3>
 
@@ -1006,7 +1062,13 @@ margin-left: 0em;
 <h2 id="related_concepts">Related concepts</h2>
 
 <ul>
-<li><a href="NS5-brane#NSHalfBranes">NS5 half-brane</a></li>
+<li>
+<p><span class="newWikiWord">permutation brane<a href="/nlab/new/permutation+brane">?</a></span></p>
+</li>
+
+<li>
+<p><a href="NS5-brane#NSHalfBranes">NS5 half-brane</a></p>
+</li>
 </ul>
 
 <h2 id="references">References</h2>
@@ -1076,14 +1138,14 @@ margin-left: 0em;
 
 <div class="revisedby">
   <p>
-  Last revised on September 28, 2018 at 07:28:58.
+  Last revised on September 28, 2018 at 09:39:11.
   See the <a href="https://ncatlab.org/nlab/history/fractional D-brane" style="color: #005c19">history</a> of this page for a list of all contributions to it.
   </p>
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/fractional+D-brane" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/fractional+D-brane/9" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(9 revisions)</span> | <a href="/nlab/show/diff/fractional+D-brane" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/fractional+D-brane" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+  <a href="/nlab/edit/fractional+D-brane" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/fractional+D-brane/10" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(10 revisions)</span> | <a href="/nlab/show/diff/fractional+D-brane" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/fractional+D-brane" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
   | <a href="https://ncatlab.org/nlab/show/fractional D-brane/cite" style="color: black">Cite</a>
   <span class="views">
     | Views:
