--- a/pages/19727.html
+++ b/pages/19727.html
@@ -315,7 +315,7 @@ margin-left: 0em;
 <div class="toc clickDown" tabindex="0">
 <h3 id="context">Context</h3>
 
-<h4 id="algebraic_quantum_field_theory">Algebraic Quantum Field Theory</h4>
+<h4 id="quantum_field_theory">Quantum Field Theory</h4>
 
 <div class="hide"><p><strong><a class="existingWikiWord" href="/nlab/show/algebraic+quantum+field+theory">algebraic quantum field theory</a></strong> (<a class="existingWikiWord" href="/nlab/show/perturbative+AQFT">perturbative</a>, <a class="existingWikiWord" href="/nlab/show/AQFT+on+curved+spacetime">on curved spacetimes</a>, <a class="existingWikiWord" href="/nlab/show/homotopical+algebraic+quantum+field+theory">homotopical</a>)</p><p><a class="existingWikiWord" href="/nlab/show/A+first+idea+of+quantum+field+theory">Introduction</a></p><h2 id="concepts">Concepts</h2><p><strong><a class="existingWikiWord" href="/nlab/show/field+theory">field theory</a></strong>: <a class="existingWikiWord" href="/nlab/show/classical+field+theory">classical</a>, <a class="existingWikiWord" href="/nlab/show/prequantum+field+theory">pre-quantum</a>, <a class="existingWikiWord" href="/nlab/show/quantum+field+theory">quantum</a>, <a class="existingWikiWord" href="/nlab/show/perturbative+quantum+field+theory">perturbative quantum</a></p><p><strong><a class="existingWikiWord" href="/nlab/show/Lagrangian+field+theory">Lagrangian field theory</a></strong></p><ul>
 <li>
@@ -754,6 +754,244 @@ margin-left: 0em;
 <p><a class="existingWikiWord" href="/nlab/show/main+theorem+of+perturbative+renormalization">main theorem of perturbative renormalization</a></p>
 </li>
 </ul></div>
+
+<h4 id="string_theory">String theory</h4>
+
+<div class="hide"><ul>
+<li>
+<p><strong><a class="existingWikiWord" href="/nlab/show/string+theory">string theory</a></strong></p>
+</li>
+
+<li>
+<p><a class="existingWikiWord" href="/nlab/show/books+about+string+theory">books about string theory</a></p>
+</li>
+</ul><h3 id="ingredients">Ingredients</h3><ul>
+<li>
+<p><a class="existingWikiWord" href="/nlab/show/quantum+field+theory">quantum field theory</a></p>
+</li>
+
+<li>
+<p><a class="existingWikiWord" href="/nlab/show/sigma-model">sigma-model</a>,</p>
+
+<ul>
+<li><a class="existingWikiWord" href="/nlab/show/CFT">CFT</a>, <a class="existingWikiWord" href="/nlab/show/perturbation+theory">perturbation theory</a></li>
+</ul>
+</li>
+
+<li>
+<p><a class="existingWikiWord" href="/nlab/show/effective+QFT">effective background QFT</a></p>
+
+<ul>
+<li><a class="existingWikiWord" href="/nlab/show/gravity">gravity</a>, <a class="existingWikiWord" href="/nlab/show/supergravity">supergravity</a>, <a class="existingWikiWord" href="/nlab/show/Yang-Mills+theory">Yang-Mills theory</a>, <a class="existingWikiWord" href="/nlab/show/quantum+gravity">quantum gravity</a></li>
+</ul>
+</li>
+</ul><h3 id="critical_string_models">Critical string models</h3><ul>
+<li>
+<p><a class="existingWikiWord" href="/nlab/show/heterotic+string+theory">heterotic string theory</a></p>
+
+<ul>
+<li>
+<p><a class="existingWikiWord" href="/nlab/show/Green-Schwarz+mechanism">Green-Schwarz mechanism</a>, <a class="existingWikiWord" href="/nlab/show/differential+string+structure">differential string structure</a>,</p>
+</li>
+
+<li>
+<p><a class="existingWikiWord" href="/nlab/show/dual+heterotic+string+theory">dual heterotic string theory</a></p>
+
+<ul>
+<li><a class="existingWikiWord" href="/nlab/show/differential+fivebrane+structure">differential fivebrane structure</a></li>
+</ul>
+</li>
+</ul>
+</li>
+
+<li>
+<p><a class="existingWikiWord" href="/nlab/show/type+II+string+theory">type II string theory</a></p>
+
+<ul>
+<li>
+<p><a class="existingWikiWord" href="/nlab/show/type+IIA+string+theory">type IIA string theory</a></p>
+</li>
+
+<li>
+<p><a class="existingWikiWord" href="/nlab/show/type+IIB+string+theory">type IIB string theory</a></p>
+
+<ul>
+<li><a class="existingWikiWord" href="/nlab/show/F-theory">F-theory</a></li>
+</ul>
+</li>
+</ul>
+</li>
+
+<li>
+<p><a class="existingWikiWord" href="/nlab/show/string+field+theory">string field theory</a></p>
+</li>
+
+<li>
+<p><a class="existingWikiWord" href="/nlab/show/duality+in+string+theory">duality in string theory</a></p>
+
+<ul>
+<li>
+<p><a class="existingWikiWord" href="/nlab/show/T-duality">T-duality</a>, <a class="existingWikiWord" href="/nlab/show/mirror+symmetry">mirror symmetry</a></p>
+</li>
+
+<li>
+<p><a class="existingWikiWord" href="/nlab/show/S-duality">S-duality</a>, <a class="existingWikiWord" href="/nlab/show/electric-magnetic+duality">electric-magnetic duality</a></p>
+</li>
+
+<li>
+<p><a class="existingWikiWord" href="/nlab/show/U-duality">U-duality</a></p>
+</li>
+
+<li>
+<p><a class="existingWikiWord" href="/nlab/show/open%2Fclosed+string+duality">open/closed string duality</a></p>
+
+<ul>
+<li>
+<p><a class="existingWikiWord" href="/nlab/show/AdS%2FCFT+correspondence">AdS/CFT correspondence</a>, <a class="existingWikiWord" href="/nlab/show/holographic+principle">holographic principle</a></p>
+</li>
+
+<li>
+<p><a class="existingWikiWord" href="/nlab/show/KLT+relations">KLT relations</a></p>
+</li>
+</ul>
+</li>
+</ul>
+</li>
+
+<li>
+<p><a class="existingWikiWord" href="/nlab/show/11-dimensional+supergravity">11-dimensional supergravity</a>, <a class="existingWikiWord" href="/nlab/show/M-theory">M-theory</a></p>
+
+<ul>
+<li><a class="existingWikiWord" href="/nlab/show/Ho%C5%99ava-Witten+theory">Hořava-Witten theory</a></li>
+</ul>
+</li>
+</ul><h3 id="extended_objects">Extended objects</h3><ul>
+<li>
+<p><a class="existingWikiWord" href="/nlab/show/brane">brane</a></p>
+</li>
+
+<li>
+<p><strong><a class="existingWikiWord" href="/nlab/show/D-brane">D-brane</a></strong></p>
+
+<ul>
+<li>
+<p><a class="existingWikiWord" href="/nlab/show/D0-brane">D0-brane</a>, <a class="existingWikiWord" href="/nlab/show/D2-brane">D2-brane</a>, <a class="existingWikiWord" href="/nlab/show/D4-brane">D4-brane</a></p>
+</li>
+
+<li>
+<p><a class="existingWikiWord" href="/nlab/show/D1-brane">D1-brane</a>, <a class="existingWikiWord" href="/nlab/show/D3-brane">D3-brane</a>, <a class="existingWikiWord" href="/nlab/show/D5-brane">D5-brane</a></p>
+</li>
+
+<li>
+<p><a class="existingWikiWord" href="/nlab/show/RR-field">RR-field</a>, <a class="existingWikiWord" href="/nlab/show/differential+K-theory">differential K-theory</a></p>
+</li>
+</ul>
+</li>
+
+<li>
+<p><strong><a class="existingWikiWord" href="/nlab/show/NS-brane">NS-brane</a></strong></p>
+
+<ul>
+<li>
+<p><a class="existingWikiWord" href="/nlab/show/string">string</a>, <a class="existingWikiWord" href="/nlab/show/sigma-model">sigma-model</a></p>
+
+<ul>
+<li>
+<p><a class="existingWikiWord" href="/nlab/show/spinning+string">spinning string</a>, <a class="existingWikiWord" href="/nlab/show/superstring">superstring</a></p>
+</li>
+
+<li>
+<p><a class="existingWikiWord" href="/nlab/show/B2-field">B2-field</a></p>
+</li>
+</ul>
+</li>
+
+<li>
+<p><a class="existingWikiWord" href="/nlab/show/NS5-brane">NS5-brane</a></p>
+
+<ul>
+<li><a class="existingWikiWord" href="/nlab/show/B6-field">B6-field</a></li>
+</ul>
+</li>
+</ul>
+</li>
+
+<li>
+<p><strong><a class="existingWikiWord" href="/nlab/show/M-brane">M-brane</a></strong></p>
+
+<ul>
+<li>
+<p><a class="existingWikiWord" href="/nlab/show/M2-brane">M2-brane</a></p>
+
+<ul>
+<li>
+<p><a class="existingWikiWord" href="/nlab/show/C3-field">C3-field</a></p>
+</li>
+
+<li>
+<p><a class="existingWikiWord" href="/nlab/show/ABJM+theory">ABJM theory</a>, <a class="existingWikiWord" href="/nlab/show/BLG+model">BLG model</a></p>
+</li>
+</ul>
+</li>
+
+<li>
+<p><a class="existingWikiWord" href="/nlab/show/M5-brane">M5-brane</a></p>
+
+<ul>
+<li>
+<p><a class="existingWikiWord" href="/nlab/show/C6-field">C6-field</a></p>
+</li>
+
+<li>
+<p><a class="existingWikiWord" href="/nlab/show/6d+%282%2C0%29-supersymmetric+QFT">6d (2,0)-supersymmetric QFT</a></p>
+</li>
+</ul>
+</li>
+</ul>
+</li>
+</ul><h3 id="topological_strings">Topological strings</h3><ul>
+<li>
+<p><a class="existingWikiWord" href="/nlab/show/topological+string">topological string</a>, <a class="existingWikiWord" href="/nlab/show/TCFT">TCFT</a></p>
+
+<ul>
+<li><a class="existingWikiWord" href="/nlab/show/A-model">A-model</a>, <a class="existingWikiWord" href="/nlab/show/B-model">B-model</a></li>
+</ul>
+</li>
+
+<li>
+<p><a class="existingWikiWord" href="/nlab/show/topological+M-theory">topological M-theory</a></p>
+</li>
+</ul><h2 id="backgrounds">Backgrounds</h2><ul>
+<li>
+<p><a class="existingWikiWord" href="/nlab/show/target+space">target space</a>, <a class="existingWikiWord" href="/nlab/show/background+gauge+field">background gauge field</a></p>
+</li>
+
+<li>
+<p><a class="existingWikiWord" href="/nlab/show/twisted+smooth+cohomology+in+string+theory">twisted smooth cohomology in string theory</a></p>
+</li>
+
+<li>
+<p><a class="existingWikiWord" href="/nlab/show/landscape+of+string+theory+vacua">landscape of string theory vacua</a></p>
+</li>
+</ul><h2 id="phenomenology">Phenomenology</h2><ul>
+<li>
+<p><a class="existingWikiWord" href="/nlab/show/string+phenomenology">string phenomenology</a></p>
+
+<ul>
+<li>
+<p><a class="existingWikiWord" href="/nlab/show/moduli+stabilization">moduli stabilization</a></p>
+</li>
+
+<li>
+<p><a class="existingWikiWord" href="/nlab/show/G2-MSSM">G2-MSSM</a></p>
+</li>
+</ul>
+</li>
+</ul><div>
+<p>
+  <a href="/nlab/edit/string+theory+-+contents">Edit this sidebar</a>
+</p>
+</div></div>
 </div>
 </div>
 
@@ -761,6 +999,7 @@ margin-left: 0em;
 <div class='maruku_toc'>
 <ul>
 <li><a href='#idea'>Idea</a></li>
+<li><a href='#related_concepts'>Related concepts</a></li>
 <li><a href='#references'>References</a></li>
 <ul>
 <li><a href='#general'>General</a></li>
@@ -774,7 +1013,7 @@ margin-left: 0em;
 
 <h2 id="idea">Idea</h2>
 
-<p>The study of <a class="existingWikiWord" href="/nlab/show/conformal+field+theory">conformal field theory</a> on <a class="existingWikiWord" href="/nlab/show/manifolds+with+boundary">manifolds with boundary</a> is known as <em>boundary conformal field theory</em> (often abbreviated as BCFT).</p>
+<p>The study of <a class="existingWikiWord" href="/nlab/show/conformal+field+theory">conformal field theory</a> on <a class="existingWikiWord" href="/nlab/show/manifolds+with+boundary">manifolds with boundary</a>, hence conformal <a class="existingWikiWord" href="/nlab/show/boundary+field+theory">boundary field theory</a>, is known as <em>boundary conformal field theory</em> (often abbreviated as BCFT).</p>
 
 <p>For the special case of <a class="existingWikiWord" href="/nlab/show/2d+CFT">2d CFT</a> understood as the <a class="existingWikiWord" href="/nlab/show/quantum+field+theory">quantum field theory</a> on the <a class="existingWikiWord" href="/nlab/show/worldsheet">worldsheet</a> of <a class="existingWikiWord" href="/nlab/show/strings">strings</a>, boundary conformal field theory is the key ingredient of <a class="existingWikiWord" href="/nlab/show/perturbative+string+theory">perturbative string theory</a> with prescribed <a class="existingWikiWord" href="/nlab/show/boundary+conditions">boundary conditions</a> for the <a class="existingWikiWord" href="/nlab/show/open+strings">open strings</a>. From the <a class="existingWikiWord" href="/nlab/show/target+spacetime">target spacetime</a>-perspective these <a class="existingWikiWord" href="/nlab/show/boundary+conditions">boundary conditions</a> are interpreted as the <a class="existingWikiWord" href="/nlab/show/D-branes">D-branes</a> that the <a class="existingWikiWord" href="/nlab/show/open+strings">open strings</a> may “end on”.</p>
 
@@ -800,6 +1039,20 @@ margin-left: 0em;
 <p>But maybe this has not yet been actually proven?</p>
 </blockquote>
 
+<h2 id="related_concepts">Related concepts</h2>
+
+<ul>
+<li>
+<p><a class="existingWikiWord" href="/nlab/show/boundary+field+theory">boundary field theory</a></p>
+</li>
+
+<li>
+<p><a class="existingWikiWord" href="/nlab/show/fractional+brane">fractional brane</a>, <span class="newWikiWord">permutation brane<a href="/nlab/new/permutation+brane">?</a></span></p>
+</li>
+</ul>
+<table><thead><tr><th>singularity</th><th><a class="existingWikiWord" href="/nlab/show/field+theory+with+singularities">field theory with singularities</a></th></tr></thead><tbody><tr><td style="text-align: left;"><a class="existingWikiWord" href="/nlab/show/boundary+condition">boundary condition</a>/<a class="existingWikiWord" href="/nlab/show/brane">brane</a></td><td style="text-align: left;"><a class="existingWikiWord" href="/nlab/show/boundary+field+theory">boundary field theory</a></td></tr>
+<tr><td style="text-align: left;"><a class="existingWikiWord" href="/nlab/show/domain+wall">domain wall</a>/<a class="existingWikiWord" href="/nlab/show/bi-brane">bi-brane</a></td><td style="text-align: left;"><a class="existingWikiWord" href="/nlab/show/QFT+with+defects">QFT with defects</a></td></tr>
+</tbody></table>
 <h2 id="references">References</h2>
 
 <h3 id="general">General</h3>
@@ -913,14 +1166,14 @@ margin-left: 0em;
 
 <div class="revisedby">
   <p>
-  Last revised on September 28, 2018 at 08:59:25.
+  Last revised on September 28, 2018 at 09:49:04.
   See the <a href="https://ncatlab.org/nlab/history/boundary conformal field theory" style="color: #005c19">history</a> of this page for a list of all contributions to it.
   </p>
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/boundary+conformal+field+theory" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/boundary+conformal+field+theory/2" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(2 revisions)</span> | <a href="/nlab/show/diff/boundary+conformal+field+theory" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/boundary+conformal+field+theory" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+  <a href="/nlab/edit/boundary+conformal+field+theory" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/boundary+conformal+field+theory/3" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(3 revisions)</span> | <a href="/nlab/show/diff/boundary+conformal+field+theory" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/boundary+conformal+field+theory" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
   | <a href="https://ncatlab.org/nlab/show/boundary conformal field theory/cite" style="color: black">Cite</a>
   <span class="views">
     | Views:
