--- a/pages/3485.html
+++ b/pages/3485.html
@@ -258,8 +258,8 @@ margin-left: 0em;
     //--><!]]>
   </script>
 
-  	<link href="https://ncatlab.org/nlab/atom_with_headlines" rel="alternate" title="Atom with headlines" type="application/atom+xml" />
-  	<link href="https://ncatlab.org/nlab/atom_with_content" rel="alternate" title="Atom with full content" type="application/atom+xml" />
+  	<link href="http://nlab-local/nlab/atom_with_headlines" rel="alternate" title="Atom with headlines" type="application/atom+xml" />
+  	<link href="http://nlab-local/nlab/atom_with_content" rel="alternate" title="Atom with full content" type="application/atom+xml" />
   <script type="text/javascript">
   document.observe("dom:loaded", function() {
     generateThmNumbers();
@@ -435,7 +435,6 @@ margin-left: 0em;
 <li><a href='#ExamplesPermutationRepresentations'>Permutation representations</a></li>
 <li><a href='#ExamplesVirtualPermutationRepresentations'>Virtual permutation representations</a></li>
 </ul>
-<li><a href='#related_entries'>Related entries</a></li>
 <li><a href='#related_concepts'>Related concepts</a></li>
 <li><a href='#references'>References</a></li>
 </ul>
@@ -639,7 +638,7 @@ margin-left: 0em;
 
 </annotation></semantics></math></div></div>
 <table><thead><tr><th>(<a class="existingWikiWord" href="/nlab/show/equivariant+cohomology">equivariant</a>) <a class="existingWikiWord" href="/nlab/show/generalized+%28Eilenberg-Steenrod%29+cohomology">cohomology</a></th><th><a class="existingWikiWord" href="/nlab/show/Brown+representability+theorem">representing</a> <br /> <a class="existingWikiWord" href="/nlab/show/spectrum">spectrum</a></th><th><a class="existingWikiWord" href="/nlab/show/equivariant+cohomology">equivariant cohomology</a> <br /> of the <a class="existingWikiWord" href="/nlab/show/point">point</a> <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mo>*</mo></mrow><annotation encoding="application/x-tex">\ast</annotation></semantics></math></th><th><a class="existingWikiWord" href="/nlab/show/generalized+%28Eilenberg-Steenrod%29+cohomology">cohomology</a> <br /> of <a class="existingWikiWord" href="/nlab/show/classifying+space">classifying space</a> <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>B</mi><mi>G</mi></mrow><annotation encoding="application/x-tex">B G</annotation></semantics></math></th></tr></thead><tbody><tr><td style="text-align: left;">(<a class="existingWikiWord" href="/nlab/show/equivariant+K-theory">equivariant</a>) <br /> <a class="existingWikiWord" href="/nlab/show/complex+K-theory">complex K-theory</a></td><td style="text-align: left;"><a class="existingWikiWord" href="/nlab/show/KU">KU</a></td><td style="text-align: left;"><a class="existingWikiWord" href="/nlab/show/representation+ring">representation ring</a> <br /> <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><msub><mi>KU</mi> <mi>G</mi></msub><mo stretchy="false">(</mo><mo>*</mo><mo stretchy="false">)</mo><mo>≃</mo><msub><mi>R</mi> <mi>ℂ</mi></msub><mo stretchy="false">(</mo><mi>G</mi><mo stretchy="false">)</mo></mrow><annotation encoding="application/x-tex">KU_G(\ast) \simeq R_{\mathbb{C}}(G)</annotation></semantics></math></td><td style="text-align: left;"><a class="existingWikiWord" href="/nlab/show/Atiyah-Segal+completion+theorem">Atiyah-Segal completion theorem</a> <br /> <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>R</mi><mo stretchy="false">(</mo><mi>G</mi><mo stretchy="false">)</mo><mo>≃</mo><msub><mi>𝕂𝕌</mi> <mi>G</mi></msub><mo stretchy="false">(</mo><mo>*</mo><mo stretchy="false">)</mo><mover><mo>⟶</mo><mtext>compl.</mtext></mover><mover><mrow><msub><mi>𝕂𝕌</mi> <mi>G</mi></msub><mo stretchy="false">(</mo><mo>*</mo><mo stretchy="false">)</mo></mrow><mo>^</mo></mover><mo>≃</mo><mi>𝕂𝕌</mi><mo stretchy="false">(</mo><mi>B</mi><mi>G</mi><mo stretchy="false">)</mo></mrow><annotation encoding="application/x-tex">R(G) \simeq  \mathbb{KU}_G(\ast)  \overset{ \text{compl.} }{\longrightarrow} \widehat {\mathbb{KU}_G(\ast)}  \simeq \mathbb{KU}(B G)</annotation></semantics></math></td></tr>
-<tr><td style="text-align: left;">(<a class="existingWikiWord" href="/nlab/show/equivariant+K-theory">equivariant</a>) <br /> <a class="existingWikiWord" href="/nlab/show/algebraic+K-theory">algebraic K-theory</a></td><td style="text-align: left;"><math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>K</mi><msub><mi>𝔽</mi> <mi>p</mi></msub></mrow><annotation encoding="application/x-tex">K \mathbb{F}_p</annotation></semantics></math></td><td style="text-align: left;"><a class="existingWikiWord" href="/nlab/show/representation+ring">representation ring</a> <br /> <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mo stretchy="false">(</mo><mi>K</mi><msub><mi>𝔽</mi> <mi>p</mi></msub><msub><mo stretchy="false">)</mo> <mi>G</mi></msub><mo stretchy="false">(</mo><mo>*</mo><mo stretchy="false">)</mo><mo>≃</mo><msub><mi>R</mi> <mi>p</mi></msub><mo stretchy="false">(</mo><mi>G</mi><mo stretchy="false">)</mo></mrow><annotation encoding="application/x-tex">(K \mathbb{F}_p)_G(\ast) \simeq R_p(G)</annotation></semantics></math></td><td style="text-align: left;"><a class="existingWikiWord" href="/nlab/show/Rector+completion+theorem">Rector completion theorem</a> <br /> <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><msub><mi>R</mi> <mrow><msub><mi>𝔽</mi> <mi>p</mi></msub></mrow></msub><mo stretchy="false">(</mo><mi>G</mi><mo stretchy="false">)</mo><mo>≃</mo><mi>K</mi><mo stretchy="false">(</mo><msub><mi>𝔽</mi> <mi>p</mi></msub><msub><mo stretchy="false">)</mo> <mi>G</mi></msub><mo stretchy="false">(</mo><mo>*</mo><mo stretchy="false">)</mo><mover><mo>⟶</mo><mtext>compl.</mtext></mover><mover><mrow><mo stretchy="false">(</mo><mi>K</mi><msub><mi>𝔽</mi> <mi>p</mi></msub><msub><mo stretchy="false">)</mo> <mi>G</mi></msub><mo stretchy="false">(</mo><mo>*</mo><mo stretchy="false">)</mo></mrow><mo>^</mo></mover><mspace width="negativethinmathspace"></mspace><mspace width="negativethinmathspace"></mspace><mover><mo>≃</mo><mtext><a href="https://ncatlab.org/nlab/show/Rector+completion+theorem">Rector 73</a></mtext></mover><mspace width="negativethinmathspace"></mspace><mspace width="negativethinmathspace"></mspace><mspace width="negativethinmathspace"></mspace><mspace width="negativethinmathspace"></mspace><mspace width="negativethinmathspace"></mspace><mspace width="negativethinmathspace"></mspace><mi>K</mi><msub><mi>𝔽</mi> <mi>p</mi></msub><mo stretchy="false">(</mo><mi>B</mi><mi>G</mi><mo stretchy="false">)</mo></mrow><annotation encoding="application/x-tex">R_{\mathbb{F}_p}(G) \simeq  K (\mathbb{F}_p)_G(\ast)  \overset{ \text{compl.} }{\longrightarrow} \widehat {(K \mathbb{F}_p)_G(\ast)} \!\! \overset{\text{&lt;a href="https://ncatlab.org/nlab/show/Rector+completion+theorem"&gt;Rector 73&lt;/a&gt;}}{\simeq} \!\!\!\!\!\! K \mathbb{F}_p(B G) </annotation></semantics></math> <br /></td></tr>
+<tr><td style="text-align: left;">(<a class="existingWikiWord" href="/nlab/show/equivariant+algebraic+K-theory">equivariant</a>) <br /> <a class="existingWikiWord" href="/nlab/show/algebraic+K-theory">algebraic K-theory</a></td><td style="text-align: left;"><math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>K</mi><msub><mi>𝔽</mi> <mi>p</mi></msub></mrow><annotation encoding="application/x-tex">K \mathbb{F}_p</annotation></semantics></math></td><td style="text-align: left;"><a class="existingWikiWord" href="/nlab/show/representation+ring">representation ring</a> <br /> <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mo stretchy="false">(</mo><mi>K</mi><msub><mi>𝔽</mi> <mi>p</mi></msub><msub><mo stretchy="false">)</mo> <mi>G</mi></msub><mo stretchy="false">(</mo><mo>*</mo><mo stretchy="false">)</mo><mo>≃</mo><msub><mi>R</mi> <mi>p</mi></msub><mo stretchy="false">(</mo><mi>G</mi><mo stretchy="false">)</mo></mrow><annotation encoding="application/x-tex">(K \mathbb{F}_p)_G(\ast) \simeq R_p(G)</annotation></semantics></math></td><td style="text-align: left;"><a class="existingWikiWord" href="/nlab/show/Rector+completion+theorem">Rector completion theorem</a> <br /> <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><msub><mi>R</mi> <mrow><msub><mi>𝔽</mi> <mi>p</mi></msub></mrow></msub><mo stretchy="false">(</mo><mi>G</mi><mo stretchy="false">)</mo><mo>≃</mo><mi>K</mi><mo stretchy="false">(</mo><msub><mi>𝔽</mi> <mi>p</mi></msub><msub><mo stretchy="false">)</mo> <mi>G</mi></msub><mo stretchy="false">(</mo><mo>*</mo><mo stretchy="false">)</mo><mover><mo>⟶</mo><mtext>compl.</mtext></mover><mover><mrow><mo stretchy="false">(</mo><mi>K</mi><msub><mi>𝔽</mi> <mi>p</mi></msub><msub><mo stretchy="false">)</mo> <mi>G</mi></msub><mo stretchy="false">(</mo><mo>*</mo><mo stretchy="false">)</mo></mrow><mo>^</mo></mover><mspace width="negativethinmathspace"></mspace><mspace width="negativethinmathspace"></mspace><mover><mo>≃</mo><mtext><a href="https://ncatlab.org/nlab/show/Rector+completion+theorem">Rector 73</a></mtext></mover><mspace width="negativethinmathspace"></mspace><mspace width="negativethinmathspace"></mspace><mspace width="negativethinmathspace"></mspace><mspace width="negativethinmathspace"></mspace><mspace width="negativethinmathspace"></mspace><mspace width="negativethinmathspace"></mspace><mi>K</mi><msub><mi>𝔽</mi> <mi>p</mi></msub><mo stretchy="false">(</mo><mi>B</mi><mi>G</mi><mo stretchy="false">)</mo></mrow><annotation encoding="application/x-tex">R_{\mathbb{F}_p}(G) \simeq  K (\mathbb{F}_p)_G(\ast)  \overset{ \text{compl.} }{\longrightarrow} \widehat {(K \mathbb{F}_p)_G(\ast)} \!\! \overset{\text{&lt;a href="https://ncatlab.org/nlab/show/Rector+completion+theorem"&gt;Rector 73&lt;/a&gt;}}{\simeq} \!\!\!\!\!\! K \mathbb{F}_p(B G) </annotation></semantics></math> <br /></td></tr>
 <tr><td style="text-align: left;">(<a class="existingWikiWord" href="/nlab/show/equivariant+stable+cohomotopy">equivariant</a>) <br /> <a class="existingWikiWord" href="/nlab/show/stable+cohomotopy">stable cohomotopy</a></td><td style="text-align: left;">K <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><msub><mi>𝔽</mi> <mn>1</mn></msub><mover><mo>≃</mo><mtext><a href="stable cohomotopy#StableCohomotopyIsAlgebraicKTheoryOverFieldWithOneElement">Segal 74</a></mtext></mover></mrow><annotation encoding="application/x-tex">\mathbb{F}_1 \overset{\text{&lt;a href="stable cohomotopy#StableCohomotopyIsAlgebraicKTheoryOverFieldWithOneElement"&gt;Segal 74&lt;/a&gt;}}{\simeq} </annotation></semantics></math> <a class="existingWikiWord" href="/nlab/show/equivariant+sphere+spectrum">S</a></td><td style="text-align: left;"><a class="existingWikiWord" href="/nlab/show/Burnside+ring">Burnside ring</a> <br /> <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><msub><mi>𝕊</mi> <mi>G</mi></msub><mo stretchy="false">(</mo><mo>*</mo><mo stretchy="false">)</mo><mo>≃</mo><mi>A</mi><mo stretchy="false">(</mo><mi>G</mi><mo stretchy="false">)</mo></mrow><annotation encoding="application/x-tex">\mathbb{S}_G(\ast) \simeq A(G)</annotation></semantics></math></td><td style="text-align: left;"><a class="existingWikiWord" href="/nlab/show/Segal-Carlsson+completion+theorem">Segal-Carlsson completion theorem</a> <br /> <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>A</mi><mo stretchy="false">(</mo><mi>G</mi><mo stretchy="false">)</mo><mover><mo>≃</mo><mtext><a href="https://ncatlab.org/nlab/show/Burnside+ring+is+equivariant+stable+cohomotopy+of+the+point">Segal 71</a></mtext></mover><msub><mi>𝕊</mi> <mi>G</mi></msub><mo stretchy="false">(</mo><mo>*</mo><mo stretchy="false">)</mo><mover><mo>⟶</mo><mtext>compl.</mtext></mover><mover><mrow><msub><mi>𝕊</mi> <mi>G</mi></msub><mo stretchy="false">(</mo><mo>*</mo><mo stretchy="false">)</mo></mrow><mo>^</mo></mover><mspace width="negativethinmathspace"></mspace><mspace width="negativethinmathspace"></mspace><mover><mo>≃</mo><mtext><a href="https://ncatlab.org/nlab/show/Segal-Carlsson+completion+theorem">Carlsson 84</a></mtext></mover><mspace width="negativethinmathspace"></mspace><mspace width="negativethinmathspace"></mspace><mspace width="negativethinmathspace"></mspace><mspace width="negativethinmathspace"></mspace><mspace width="negativethinmathspace"></mspace><mspace width="negativethinmathspace"></mspace><mi>𝕊</mi><mo stretchy="false">(</mo><mi>B</mi><mi>G</mi><mo stretchy="false">)</mo></mrow><annotation encoding="application/x-tex">A(G) \overset{\text{&lt;a href="https://ncatlab.org/nlab/show/Burnside+ring+is+equivariant+stable+cohomotopy+of+the+point"&gt;Segal 71&lt;/a&gt;}}{\simeq}  \mathbb{S}_G(\ast)  \overset{ \text{compl.} }{\longrightarrow} \widehat {\mathbb{S}_G(\ast)} \!\! \overset{\text{&lt;a href="https://ncatlab.org/nlab/show/Segal-Carlsson+completion+theorem"&gt;Carlsson 84&lt;/a&gt;}}{\simeq} \!\!\!\!\!\! \mathbb{S}(B G) </annotation></semantics></math> <br /></td></tr>
 </tbody></table>
 <h2 id="examples">Examples</h2>
@@ -869,37 +868,31 @@ margin-left: 0em;
 <p>The special case of <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><msub><mi>S</mi> <mn>4</mn></msub></mrow><annotation encoding="application/x-tex">S_4</annotation></semantics></math> is made explicit for <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>k</mi><mo>=</mo><mi>ℝ</mi></mrow><annotation encoding="application/x-tex">k =\mathbb{R}</annotation></semantics></math> in <a href="#Montaldi">Montaldi</a>, bottom of <a href="http://www.maths.manchester.ac.uk/~jm/wiki/Representations/S4">this page</a>, and for <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>k</mi><mo>=</mo><mi>ℂ</mi></mrow><annotation encoding="application/x-tex">k =\mathbb{C}</annotation></semantics></math> at <em><a href="Gram-Schmidt+process#CategorifiedGramSchmidtProcess">Categorified Gram-Schmidt process</a></em>.</p>
 </div>
 
-<h2 id="related_entries">Related entries</h2>
+<h2 id="related_concepts">Related concepts</h2>
 
 <ul>
-<li>
-<p><a class="existingWikiWord" href="/nlab/show/representation+theory">representation theory</a>, <a class="existingWikiWord" href="/nlab/show/linear+representation">linear representation</a>,</p>
-
-<p><a class="existingWikiWord" href="/nlab/show/category+of+representations">category of representations</a></p>
-</li>
-
 <li>
 <p><a class="existingWikiWord" href="/nlab/show/covering+space">covering space</a></p>
 </li>
 
 <li>
-<p><a class="existingWikiWord" href="/nlab/show/Burnside+ring">Burnside ring</a></p>
+<p><a class="existingWikiWord" href="/nlab/show/regular+representation">regular representation</a></p>
+</li>
+
+<li>
+<p><a class="existingWikiWord" href="/nlab/show/Burnside+ring">Burnside ring</a>, <a class="existingWikiWord" href="/nlab/show/stable+cohomotopy">stable cohomotopy</a></p>
 </li>
 
 <li>
 <p><a class="existingWikiWord" href="/nlab/show/groupoidification">groupoidification</a></p>
 </li>
-</ul>
-
-<h2 id="related_concepts">Related concepts</h2>
-
-<ul>
-<li>
-<p><a class="existingWikiWord" href="/nlab/show/regular+representation">regular representation</a></p>
-</li>
 
 <li>
 <p><a class="existingWikiWord" href="/nlab/show/%E2%88%9E-permutation+representation">∞-permutation representation</a></p>
+</li>
+
+<li>
+<p><a class="existingWikiWord" href="/nlab/show/permutation+D-brane">permutation D-brane</a></p>
 </li>
 </ul>
 
@@ -978,14 +971,14 @@ margin-left: 0em;
 
 <div class="revisedby">
   <p>
-  Last revised on September 25, 2018 at 04:50:24.
+  Last revised on September 28, 2018 at 10:23:48.
   See the <a href="https://ncatlab.org/nlab/history/permutation representation" style="color: #005c19">history</a> of this page for a list of all contributions to it.
   </p>
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/permutation+representation" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/permutation+representation/26" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(26 revisions)</span> | <a href="/nlab/show/diff/permutation+representation" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/permutation+representation" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+  <a href="/nlab/edit/permutation+representation" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/permutation+representation/27" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(27 revisions)</span> | <a href="/nlab/show/diff/permutation+representation" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/permutation+representation" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
   | <a href="https://ncatlab.org/nlab/show/permutation representation/cite" style="color: black">Cite</a>
   <span class="views">
     | Views:
