--- a/pages/6713.html
+++ b/pages/6713.html
@@ -872,6 +872,12 @@ margin-left: 0em;
 </li>
 
 <li>
+<p><a class="existingWikiWord" href="/nlab/show/fractional+D-brane">fractional D-brane</a>,</p>
+
+<p><a class="existingWikiWord" href="/nlab/show/permutation+D-brane">permutation D-brane</a></p>
+</li>
+
+<li>
 <p><a class="existingWikiWord" href="/nlab/show/Chan-Paton+bundle">Chan-Paton bundle</a>, <a class="existingWikiWord" href="/nlab/show/twisted+bundle">twisted bundle</a>, <a class="existingWikiWord" href="/nlab/show/twisted+K-theory">twisted K-theory</a>, <a class="existingWikiWord" href="/nlab/show/Chan-Paton+gauge+field">Chan-Paton gauge field</a></p>
 </li>
 
@@ -1212,14 +1218,14 @@ margin-left: 0em;
 
 <div class="revisedby">
   <p>
-  Last revised on September 27, 2018 at 14:53:57.
+  Last revised on September 28, 2018 at 10:13:11.
   See the <a href="https://ncatlab.org/nlab/history/D-brane" style="color: #005c19">history</a> of this page for a list of all contributions to it.
   </p>
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/D-brane" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/D-brane/57" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(57 revisions)</span> | <a href="/nlab/show/diff/D-brane" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/D-brane" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+  <a href="/nlab/edit/D-brane" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/D-brane/58" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(58 revisions)</span> | <a href="/nlab/show/diff/D-brane" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/D-brane" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
   | <a href="https://ncatlab.org/nlab/show/D-brane/cite" style="color: black">Cite</a>
   <span class="views">
     | Views:
