--- a/pages/10762.html
+++ b/pages/10762.html
@@ -613,7 +613,13 @@ margin-left: 0em;
 <h2 id="related_entries">Related entries</h2>
 
 <ul>
-<li><a class="existingWikiWord" href="/nlab/show/J-homomorphism">J-homomorphism</a></li>
+<li>
+<p><a class="existingWikiWord" href="/nlab/show/J-homomorphism">J-homomorphism</a></p>
+</li>
+
+<li>
+<p><a class="existingWikiWord" href="/nlab/show/Schur+index">Schur index</a></p>
+</li>
 </ul>
 
 <h2 id="references">References</h2>
@@ -681,14 +687,14 @@ margin-left: 0em;
 
 <div class="revisedby">
   <p>
-  Last revised on September 26, 2018 at 07:06:46.
+  Last revised on September 28, 2018 at 11:05:21.
   See the <a href="https://ncatlab.org/nlab/history/Adams conjecture" style="color: #005c19">history</a> of this page for a list of all contributions to it.
   </p>
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/Adams+conjecture" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/Adams+conjecture/6" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(6 revisions)</span> | <a href="/nlab/show/diff/Adams+conjecture" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/Adams+conjecture" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+  <a href="/nlab/edit/Adams+conjecture" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/Adams+conjecture/7" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(7 revisions)</span> | <a href="/nlab/show/diff/Adams+conjecture" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/Adams+conjecture" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
   | <a href="https://ncatlab.org/nlab/show/Adams conjecture/cite" style="color: black">Cite</a>
   <span class="views">
     | Views:
