--- a/pages/19727.html
+++ b/pages/19727.html
@@ -258,8 +258,8 @@ margin-left: 0em;
     //--><!]]>
   </script>
 
-  	<link href="https://ncatlab.org/nlab/atom_with_headlines" rel="alternate" title="Atom with headlines" type="application/atom+xml" />
-  	<link href="https://ncatlab.org/nlab/atom_with_content" rel="alternate" title="Atom with full content" type="application/atom+xml" />
+  	<link href="http://nlab-local/nlab/atom_with_headlines" rel="alternate" title="Atom with headlines" type="application/atom+xml" />
+  	<link href="http://nlab-local/nlab/atom_with_content" rel="alternate" title="Atom with full content" type="application/atom+xml" />
   <script type="text/javascript">
   document.observe("dom:loaded", function() {
     generateThmNumbers();
@@ -1004,8 +1004,7 @@ margin-left: 0em;
 <ul>
 <li><a href='#general'>General</a></li>
 <li><a href='#relation_to_ktheory'>Relation to K-theory</a></li>
-<li><a href='#for_wzw_models'>For WZW models</a></li>
-<li><a href='#for_gepner_models'>For Gepner models</a></li>
+<li><a href='#for_rational_cft_wzw_models_and_gepner_models'>For rational CFT, WZW models and Gepner models</a></li>
 <li><a href='#on_orbifolds'>On orbifolds</a></li>
 </ul>
 </ul>
@@ -1047,7 +1046,7 @@ margin-left: 0em;
 </li>
 
 <li>
-<p><a class="existingWikiWord" href="/nlab/show/fractional+brane">fractional brane</a>, <span class="newWikiWord">permutation brane<a href="/nlab/new/permutation+brane">?</a></span></p>
+<p><a class="existingWikiWord" href="/nlab/show/fractional+brane">fractional brane</a>, <a class="existingWikiWord" href="/nlab/show/permutation+brane">permutation brane</a></p>
 </li>
 </ul>
 <table><thead><tr><th>singularity</th><th><a class="existingWikiWord" href="/nlab/show/field+theory+with+singularities">field theory with singularities</a></th></tr></thead><tbody><tr><td style="text-align: left;"><a class="existingWikiWord" href="/nlab/show/boundary+condition">boundary condition</a>/<a class="existingWikiWord" href="/nlab/show/brane">brane</a></td><td style="text-align: left;"><a class="existingWikiWord" href="/nlab/show/boundary+field+theory">boundary field theory</a></td></tr>
@@ -1113,15 +1112,19 @@ margin-left: 0em;
 <li><a href="#QuirozStefanski01">Quiroz-Stefanski 01</a></li>
 </ul>
 
-<h3 id="for_wzw_models">For WZW models</h3>
+<h3 id="for_rational_cft_wzw_models_and_gepner_models">For rational CFT, WZW models and Gepner models</h3>
 
-<p>For <a class="existingWikiWord" href="/nlab/show/WZW+models">WZW models</a>:</p>
+<p>For <a class="existingWikiWord" href="/nlab/show/rational+CFT">rational CFT</a></p>
+
+<ul>
+<li>Sergei E. Parkhomenko, <em>Free Field Construction of D-Branes in Rational Models of CFT and Gepner Models</em> (<a href="https://arxiv.org/abs/0802.3445">arXiv:0802.3445</a>)</li>
+</ul>
+
+<p>Specifically for <a class="existingWikiWord" href="/nlab/show/WZW+models">WZW models</a>:</p>
 
 <ul>
 <li><a class="existingWikiWord" href="/nlab/show/Giovanni+Felder">Giovanni Felder</a>, <a class="existingWikiWord" href="/nlab/show/J%C3%BCrg+Fr%C3%B6hlich">Jürg Fröhlich</a>, <a class="existingWikiWord" href="/nlab/show/J%C3%BCrgen+Fuchs">Jürgen Fuchs</a>, <a class="existingWikiWord" href="/nlab/show/Christoph+Schweigert">Christoph Schweigert</a>, <em>The geometry of WZW branes</em> (<a href="https://arxiv.org/abs/hep-th/9909030">arXiv:hep-th/9909030</a>)</li>
 </ul>
-
-<h3 id="for_gepner_models">For Gepner models</h3>
 
 <p>For <a class="existingWikiWord" href="/nlab/show/Gepner+models">Gepner models</a>:</p>
 
@@ -1166,14 +1169,14 @@ margin-left: 0em;
 
 <div class="revisedby">
   <p>
-  Last revised on September 28, 2018 at 09:49:04.
+  Last revised on September 28, 2018 at 11:53:39.
   See the <a href="https://ncatlab.org/nlab/history/boundary conformal field theory" style="color: #005c19">history</a> of this page for a list of all contributions to it.
   </p>
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/boundary+conformal+field+theory" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/boundary+conformal+field+theory/3" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(3 revisions)</span> | <a href="/nlab/show/diff/boundary+conformal+field+theory" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/boundary+conformal+field+theory" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+  <a href="/nlab/edit/boundary+conformal+field+theory" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/boundary+conformal+field+theory/4" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(4 revisions)</span> | <a href="/nlab/show/diff/boundary+conformal+field+theory" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/boundary+conformal+field+theory" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
   | <a href="https://ncatlab.org/nlab/show/boundary conformal field theory/cite" style="color: black">Cite</a>
   <span class="views">
     | Views:
