--- a/pages/11341.html
+++ b/pages/11341.html
@@ -294,7 +294,7 @@ margin-left: 0em;
     <a href="/nlab/show/HomePage" accesskey="H" title="Home page">Home Page</a> |
     <a href="/nlab/all_pages" accesskey="A" title="List of all pages">All Pages</a> |
     <a href="/nlab/latest_revisions" accesskey="U" title="Latest edits and page creations">Latest Revisions</a> |
-    <a href="https://nforum.ncatlab.org/discussions/?CategoryID=0" title="Discuss this page on the nForum. It does not yet have a dedicated thread; feel free to create one, giving it the same name as the title of this page" style="color:black">Discuss this page</a> |
+    <a href="https://nforum.ncatlab.org/discussion/9062/#Item_1" title="Discuss this page in its dedicated thread on the nForum" style="color: black">Discuss this page</a> |
     <a href="/nlab/feeds" title="Subscribe to changes by Atom">Feeds</a> |
 <form accept-charset="utf-8" action="/nlab/search" id="navigationSearchForm" method="get">      <fieldset class="search"><input type="text" id="searchField" name="query" value="Search"
              onfocus="this.value == 'Search' ? this.value = '' : true"
@@ -685,6 +685,10 @@ margin-left: 0em;
 <div class='maruku_toc'>
 <ul>
 <li><a href='#idea'>Idea</a></li>
+<li><a href='#properties'>Properties</a></li>
+<ul>
+<li><a href='#boundary_states'>Boundary states</a></li>
+</ul>
 <li><a href='#related_concepts'>Related concepts</a></li>
 <li><a href='#references'>References</a></li>
 </ul>
@@ -693,6 +697,16 @@ margin-left: 0em;
 <h2 id="idea">Idea</h2>
 
 <p>The <em>Gepner model</em> (after <a class="existingWikiWord" href="/nlab/show/Doron+Gepner">Doron Gepner</a>) is a <a class="existingWikiWord" href="/nlab/show/2d+SCFT">2d SCFT</a> which is “non-geometric” in that it does not arise as a <a class="existingWikiWord" href="/nlab/show/sigma-model">sigma-model</a> with <a class="existingWikiWord" href="/nlab/show/target+space">target space</a> a <a class="existingWikiWord" href="/nlab/show/smooth+manifold">smooth manifold</a>. Indeed the Gepner model appears precisely at the degeneration point of such sigma-models in the <em><a class="existingWikiWord" href="/nlab/show/flop+transition">flop transition</a></em>.</p>
+
+<h2 id="properties">Properties</h2>
+
+<h3 id="boundary_states">Boundary states</h3>
+
+<blockquote>
+<p>All the known <a class="existingWikiWord" href="/nlab/show/rational+CFT">rational</a> <a class="existingWikiWord" href="/nlab/show/boundary+states">boundary states</a> for <a class="existingWikiWord" href="/nlab/show/Gepner+models">Gepner models</a> can be regarded as <a class="existingWikiWord" href="/nlab/show/permutation+branes">permutation branes</a>.</p>
+</blockquote>
+
+<p>(<a href="#EngerRecknagelRoggenkamp05">Enger-Recknagel-Roggenkamp 05</a>)</p>
 
 <h2 id="related_concepts">Related concepts</h2>
 
@@ -739,7 +753,7 @@ margin-left: 0em;
 <p>Discussion of <a class="existingWikiWord" href="/nlab/show/permutation+D-branes">permutation D-branes</a> for Gepner models, via <a class="existingWikiWord" href="/nlab/show/boundary+conformal+field+theory">boundary conformal field theory</a>, includes</p>
 
 <ul>
-<li>Håkon Enger, <a class="existingWikiWord" href="/nlab/show/Andreas+Recknagel">Andreas Recknagel</a>, <a class="existingWikiWord" href="/nlab/show/Daniel+Roggenkamp">Daniel Roggenkamp</a>, <em>Permutation branes and linear matrix factorisations</em>, JHEP0601:087, 2006 (<a href="https://arxiv.org/abs/hep-th/0508053">arXiv:hep-th/0508053</a>)</li>
+<li id="EngerRecknagelRoggenkamp05">Håkon Enger, <a class="existingWikiWord" href="/nlab/show/Andreas+Recknagel">Andreas Recknagel</a>, <a class="existingWikiWord" href="/nlab/show/Daniel+Roggenkamp">Daniel Roggenkamp</a>, <em>Permutation branes and linear matrix factorisations</em>, JHEP0601:087, 2006 (<a href="https://arxiv.org/abs/hep-th/0508053">arXiv:hep-th/0508053</a>)</li>
 </ul>
 </body></html>
 
@@ -747,14 +761,14 @@ margin-left: 0em;
 
 <div class="revisedby">
   <p>
-  Last revised on September 28, 2018 at 10:43:11.
+  Last revised on September 28, 2018 at 11:59:52.
   See the <a href="https://ncatlab.org/nlab/history/Gepner model" style="color: #005c19">history</a> of this page for a list of all contributions to it.
   </p>
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/Gepner+model" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/Gepner+model/1" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(1 revision)</span> | <a href="/nlab/show/diff/Gepner+model" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/Gepner+model" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+  <a href="/nlab/edit/Gepner+model" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/Gepner+model/2" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(2 revisions)</span> | <a href="/nlab/show/diff/Gepner+model" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/Gepner+model" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
   | <a href="https://ncatlab.org/nlab/show/Gepner model/cite" style="color: black">Cite</a>
   <span class="views">
     | Views:
